--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
     <meta
       name="description"
       content="Predict clinical trial success with machine learning"
-    />
+    />  
+    <link href="https://fonts.googleapis.com/css?family=Karla:400,700&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
